# ed-journals

./: .gitignore  Cargo.toml  LICENSE  readme.md
ed-exobiology/: Cargo.toml  readme.md
ed-exobiology/src/: lib.rs  modules.rs
ed-exobiology/src/modules/exobiology/: mod.rs  models.rs  static.rs  traits.rs
ed-exobiology/src/modules/exobiology/models/: spawn_condition.rs  spawn_source.rs
ed-exobiology/src/modules/exobiology/static/: region_data.rs  species_spawn_conditions.rs
ed-exobiology/src/modules/exobiology/traits/: species_spawn_conditions.rs
ed-journals/: Cargo.toml  readme.md
ed-journals/examples/: live_read_changed_json_file.rs  live_read_json_file.rs  live_read_last_log_file.rs  live_read_logs_and_json.rs  read_all_logs_in_directory.rs  read_last_log_file.rs  read_single_log_file.rs
ed-journals/src/: lib.rs  macros.rs  models.rs  modules.rs
ed-journals/src/models/: async.rs  blocking.rs  journal_dir.rs  journal_event.rs  journal_event_content.rs  journal_file.rs  journal_file_reader.rs  journal_reader.rs  live_journal_dir_reader.rs  live_journal_file_reader.rs
ed-journals/src/models/async/: journal_file_reader.rs  live_journal_dir_reader.rs  live_journal_file_reader.rs
ed-journals/src/models/blocking/: journal_file_reader.rs  live_journal_dir_reader.rs  live_journal_file_reader.rs
ed-journals/src/models/journal_event_content/: afmu_repairs_event.rs  approach_body_event.rs  approach_settlement_event.rs  backpack_change_event.rs  backpack_event.rs  bounty_event.rs  buy_drones_event.rs  buy_exploration_data_event.rs  buy_micro_resource_event.rs  buy_suit_event.rs  buy_weapon_event.rs  cap_ship_bond_event.rs  cargo_depot_event.rs  cargo_transfer_event.rs  carrier_bank_transfer_event.rs  carrier_buy_event.rs  carrier_crew_services_event.rs  carrier_deposit_fuel_event.rs  carrier_finance_event.rs  carrier_jump_cancelled_event.rs  carrier_jump_event.rs  carrier_jump_request_event.rs  carrier_module_pack_event.rs  carrier_name_changed_event.rs  carrier_stats_event.rs  carrier_trade_order_event.rs  change_crew_role_event.rs  clear_impound_event.rs  clear_saved_game_event.rs  codex_entry_event.rs  collect_cargo_event.rs  collect_items_event.rs  commander_event.rs  commit_crime_event.rs  community_goal_discard_event.rs  community_goal_event.rs  community_goal_join_event.rs  create_suit_loadout_event.rs  crew_assign_event.rs  crew_fire_event.rs  (+154 more)
ed-journals/src/models/journal_event_content/shared/: exploration.rs  galaxy.rs  materials.rs  odyssey.rs  shared_commodity.rs  shared_material.rs  shared_material_category.rs  ship.rs
ed-journals/src/modules/backpack/: mod.rs
ed-journals/src/modules/backpack/models/: backpack.rs
ed-journals/src/modules/blockers/: async_blocker.rs  mod.rs  sync_blocker.rs
ed-journals/src/modules/cargo/: mod.rs
ed-journals/src/modules/cargo/models/: cargo.rs
ed-journals/src/modules/civilization/: mod.rs
ed-journals/src/modules/civilization/models/: crime.rs  faction.rs  faction_state.rs  superpower.rs  system_security.rs  zz_crimes.txt
ed-journals/src/modules/commander/: mod.rs
ed-journals/src/modules/commander/models/: exobiology_rank.rs  mercenary_rank.rs  trade_rank.rs
ed-journals/src/modules/exobiology/: mod.rs  models.rs
ed-journals/src/modules/exobiology/models/: genus.rs  spawn_condition.rs  spawn_source.rs  species.rs  variant.rs  variant_color.rs  variant_source.rs  zz_variants.txt
ed-journals/src/modules/exploration/: functions.rs  mod.rs  models.rs
ed-journals/src/modules/exploration/functions/: calculate_estimated_worth.rs  format_codex_string.rs
ed-journals/src/modules/exploration/models/: codex_entry.rs  codex_geological_entry.rs  codex_organic_structure_entry.rs  codex_planet_entry.rs  codex_thargoid_entry.rs  planetary_signal_type.rs
ed-journals/src/modules/exploration/shared/: codex_regex.rs
ed-journals/src/modules/format/: mod.rs  traits.rs
ed-journals/src/modules/format/models/: format.rs
ed-journals/src/modules/format/traits/: format_serializer.rs
ed-journals/src/modules/fs/: error.rs  mod.rs  models.rs
ed-journals/src/modules/fs/functions/: auto_detect_journal_path.rs
ed-journals/src/modules/fs/models/: async_blocker.rs  common.rs  dir_watcher.rs  file_watcher.rs  log_dir.rs  sync_blocker.rs
ed-journals/src/modules/fs/traits/: unblocker.rs
ed-journals/src/modules/galaxy/: functions.rs  mod.rs  static.rs
ed-journals/src/modules/galaxy/models/: atmosphere.rs  gravity.rs  (+7 more)
ed-journals/src/modules/io/: mod.rs
ed-journals/src/modules/journal/: journal_event.rs  mod.rs
ed-journals/src/modules/logs/: async.rs  asynchronous.rs  blocking.rs  log_dir.rs  log_file.rs  mod.rs
ed-journals/src/modules/market/: mod.rs  models.rs
ed-journals/src/modules/materials/: mod.rs
ed-journals/src/modules/mixed/: mod.rs  models.rs
ed-journals/src/modules/modules_info/: mod.rs  models.rs
ed-journals/src/modules/nav_route/: mod.rs
ed-journals/src/modules/odyssey/: mod.rs  models.rs
ed-journals/src/modules/outfitting/: models.rs
ed-journals/src/modules/partials/: mod.rs  models.rs
ed-journals/src/modules/shared/: mod.rs  shared_commodity.rs  shared_material.rs  shared_material_category.rs
ed-journals/src/modules/ship/: mod.rs
ed-journals/src/modules/shipyard/: models.rs
ed-journals/src/modules/state/: mod.rs  models.rs
ed-journals/src/modules/status/: asynchronous.rs  blocking.rs  mod.rs  models.rs
ed-journals/src/modules/trading/: mod.rs
ed-journals/src/modules/utils/: macros.rs
ed-state/: Cargo.toml  readme.md
ed-state/src/: lib.rs  modules.rs
ed-state/src/modules/commander/: mod.rs  models.rs
ed-state/src/modules/journal/: mod.rs  models.rs
ed-state/src/modules/state/: mod.rs  models.rs  traits.rs
ed-state/src/modules/system/: mod.rs  models.rs
(+1679 files in other folders)
