[package]
name = "ed-journals"
description = "Provides models for representing and parsing elite dangerous journal files"
repository = "https://github.com/rster2002/ed-logs"
version = "0.2.0"
edition = "2021"
license = "MIT"
keywords = ["elite-dangerous", "elite-journal"]
readme = "readme.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex-macro = "0.2.0"
once_cell = "1.19.0"
thiserror = "1.0.58"
regex = "1.10.4"
chrono = { version = "0.4.38", features = ["serde"] }
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
kinded = "0.3.0"
lazy_static = "1.4.0"
log = "0.4.21"
notify = "6.1.1"
tokio = { version = "1.37.0", features = ["fs", "sync", "io-util"], default-features = false, optional = true }
async-mutex = { version = "1.4.0", optional = true }
strum = { version = "0.26.2", features = ["derive"] }

[dev-dependencies]
tokio-test = "0.4.4"

[features]
default = []
asynchronous = ["dep:tokio", "dep:async-mutex"]
strict = []
