[package]
name = "ed-journals"
description = "Provides models for representing and parsing elite dangerous journal files"
repository = "https://github.com/rster2002/ed-logs"
version = "0.11.4"
edition = "2021"
license = "MIT"
keywords = ["elite-dangerous", "elite-journal"]
readme = "readme.md"
include = ["/src", "/LICENSE", "readme.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.58"
regex = "1.10.4"
chrono = { version = "0.4.38", features = ["serde"] }
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
kinded = "0.3.0"
lazy_static = "1.4.0"
notify = "6.1.1"
tokio = { version = "1.37.0", features = [
    "fs",
    "sync",
    "io-util",
], default-features = false, optional = true }
async-mutex = { version = "1.4.0", optional = true }
strum = { version = "0.26.2", features = ["derive"] }
futures = { version = "0.3.31", optional = true }
tokio-util = { version = "0.7.14", features = ["compat"], optional = true }
directories = "5.0.1"

[dev-dependencies]
tokio-test = "0.4.4"
smol = "2.0.2"
async-fs = { version = "2.1.2" }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["asynchronous"]
asynchronous = ["dep:tokio", "dep:async-mutex", "dep:futures"]
allow-unknown = []
# Enables loading Journal files from before game version 4. Not fully supported and may lead to
# parsing errors. In such cases, PRs with affected Journal files/events are appreciated :)
legacy = []
tokio = ["dep:tokio-util"]
